fix selectedItems overflow

--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,7 @@ ul {
 }
 
 #ul_tree {
-    padding: 10px;
+    padding: 15px;
     margin: 0;
 }
 
